# blog

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  PRODUCT_REQUIREMENTS.md  README.md  SECURITY.md  docker-compose.yml  product-requirements.md  pyproject.toml  render-deploy.md  render.yaml  seo.md  test.db  todo.txt
.claude/memory/: MEMORY.md  project_api_exposure.md  project_blog_platform.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: app.py  db.py  schemas.py
app/core/: users.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  test.db  todo.txt
backend/alembic/: env.py
backend/alembic/versions/: 4eb5408a550e_add_role_to_user.py  baa7cc32c3f7_initial_schema.py  c3d1a2e4f5b6_add_seo_fields_to_site_configs.py  d4e5f6a7b8c9_add_og_fields_to_site_configs.py
backend/app/: app.py
backend/app/api/v1/: admin.py  articles.py  author.py  login.py  profile.py  register.py
backend/app/core/: users.py
backend/app/database/: db.py
backend/app/models/: articles.py  theme.py  users.py
backend/app/services/: admin.py  articles.py  captcha.py  profile.py  site_settings.py  theme.py
deploy/: nginx.conf.template  start.sh  supervisord.conf
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
themes/: default.css
user-manual/: deploy.md  guide.html  index.html  robots.txt  script.js  sitemap.xml  style.css
(+51 files in other folders)
